# flowdump

./: .pre-commit-config.yaml  README.md  flowdump.html  index.html  pyproject.toml  search.js
.github/workflows/: docs.yml  python_tests.yaml
flowdump/: core.html  nipype_report_parser.html  utils.html  workflow_json.html
src/flowdump/: __init__.py  core.py  nipype_report_parser.py  utils.py  workflow_json.py
tests/: test_nipype_example.py  test_report_rst_parser.py
